# geo-tileset-rs

./: Cargo.toml  README.md
src/: asset.rs  bounding_volume.rs  content.rs  group.rs  lib.rs  metadata_entity.rs  properties.rs  subtrees.rs  tile.rs  tile_implicit_tiling.rs  tileset.rs
src/common/: definitions.rs  extension.rs  extras.rs  root_property.rs
src/property_table/: property_table.rs  property_table_property.rs
src/schema/: class.rs  class_property.rs  enum_.rs  enum_value.rs  schema.rs
src/statistics/: statistics.rs  statistics_class.rs  statistics_class_property.rs
src/styling/: pnts_style.rs  style.rs  style_boolean_expression.rs  style_color_expression.rs  style_conditions.rs  style_conditions_condition.rs  style_expression.rs  style_meta.rs  style_number_expression.rs
src/subtree/: availability.rs  buffer.rs  buffer_view.rs  subtree.rs
src/tile_formats/: b3dm_feature_table.rs  batch_table.rs  feature_table.rs  i3dm_feature_table.rs  pnts_feature_table.rs
